Attempted to fix arrow down button on safari

--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,7 @@ and (max-device-width : 1024px)
     position: absolute;
     width: 50%;
     bottom: 25px;
+    display:flex;
 }
 
 .project-expand-button
